[tool.poetry.scripts]
mmconfig-tool = "mmtools.commands.config:app"


[tool.poetry]
name = "mmtools"
version = "0.1.0"
description = "MMLab's tools are easy to use, let's make them even easier."
authors = ["Minato <82735346+minato-ellie@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
typer = "^0.7.0"
openmim = "^0.3.6"
mmengine = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.1.0"
nox = "^2022.11.21"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
